sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: ';' expected but 'for' found.
  	}for (i <- getNombreValeurs()/2 to 0){
         ^AlgCocktailSort1:20: error: 'while' expected but '}' found.
}
^